turtleart.lessons.turtleart.Main.Flower3.scala.error
Source:8: error: not found: value gauhce
	gauhce(45)
        ^